# gauge_3d

./: .gitignore  4D_GAUSSIAN_IMPLEMENTATION_SUMMARY.md  COMPLETE_DOCUMENTATION.md  PHASE3_DEVELOPMENT_ROADMAP.md  PHASE3_IMPLEMENTATION_STATUS.md  README.md  TRANSFORMER_TEST_RESULTS.md  advanced_cli.py  create_test_subset.py  demo_depth_viewer.py  demo_visualization.py  distance_measurement.py  enhanced_visualization.py  main.py  performance_optimizer.py  pyproject.toml  quick_depth_view.py  run.py  run_direct_pipeline.py  run_end_to_end.py  run_end_to_end_fixed.py  run_phase1.py  test.py  test_4d_gaussian_basic.py  test_4d_gaussian_integration.py  test_4d_gaussian_setup.py  test_4d_gaussian_subset.py  test_quality_presets.py  test_transformer_pipeline.py  unified_pipeline.py  utils.py  validation_suite.py  visualize_output.py
4d_gaussian/: README.md  __init__.py  run_4d_gaussian.py
config/: pipeline_config.yaml
depth_estimation/: README.md  depth_pipeline.py  main_pipeline.py  output_manager.py  setup_environment.py  video_depth_processor.py
output/: direct_pipeline_results.json  pipeline_results.json
src/: video_processor.py
tests/: __init__.py  test_dependencies.py  test_depth.py  test_environment.py  test_gaussian.py  test_integration.py  test_structure.py  test_transformer.py
transformer/: README.md  __init__.py  enhancement_pipeline.py  p4transformer_integration.py  point_cloud_extractor.py  reconstruction_pipeline.py
viewer/: README.md  __init__.py  depth_viewer.py  gaussian_viewer.py  pipeline_viewer.py  point_cloud_viewer.py  stats_viewer.py
(+19 files in other folders)
